:construction: not much done

--- a/loggedIn.html
+++ b/loggedIn.html
@@ -15,6 +15,6 @@
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
   <script src="javascript/events.js"></script>  
   <script src="javascript/fbSetup.js"></script>
-  <script src="javascript/checkState.js"></script>
+  <script src="javascript/fbFunctions.js"></script>
   </body>
 </html>
