--- a/loggedIn.html
+++ b/loggedIn.html
@@ -9,6 +9,7 @@
   <body>
     <h1>Welcome to My Awesome App</h1>
     <button id="st">sign out</button>
+    <div id="currentUsers"></div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -16,5 +17,6 @@
   <script src="javascript/events.js"></script>  
   <script src="javascript/fbSetup.js"></script>
   <script src="javascript/fbFunctions.js"></script>
+  <script src="javascript/domManipulations.js"></script>  
   </body>
 </html>
