--- a/loggedIn.html
+++ b/loggedIn.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Sample FirebaseUI App</title>
     
-    
+    <!--Materialize CSS-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   </head>
   <body>
     <h1>Welcome to My Awesome App</h1>
@@ -13,6 +14,8 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
   <script src="javascript/events.js"></script>  
   <script src="javascript/fbSetup.js"></script>
