--- a/chat.html
+++ b/chat.html
@@ -9,15 +9,22 @@
   </head>
   <body>
     <h1>This is the chat page!</h1>
-    <button id="sendMsg" type="submit"></button>
-
+    <div class="row">
+        <div class="input-field col s6">
+          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+        </div>
+    </div>
+    <div class="row">
+      <button id="sendMsg" type="submit">send</button>
+    </div>
+    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
     <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-  <script src="javascript/events.js"></script>  
-  <script src="javascript/fbSetup.js"></script>
-  <script src="javascript/fbFunctions.js"></script>
-  <script src="javascript/domManipulations.js"></script>  
+  <script src="/javascript/events.js"></script>  
+  <script src="/javascript/fbSetup.js"></script>
+  <script src="/javascript/fbFunctions.js"></script>
+  <script src="/javascript/domManipulations.js"></script>  
   </body>
 </html>
