--- a/chat.html
+++ b/chat.html
@@ -11,7 +11,7 @@
     <h1>This is the chat page!</h1>
     <div class="row">
         <div class="input-field col s6">
-          <input placeholder="Placeholder" id="first_name" type="text" class="validate">
+          <input placeholder="message" id="message" type="text" class="validate">
         </div>
     </div>
     <div class="row">
