--- a/loggedIn.html
+++ b/loggedIn.html
@@ -11,6 +11,16 @@
     <h1>Welcome to My Awesome App</h1>
     <button id="st">sign out</button>
     <div id="currentUsers"></div>
+    <div class="row">
+      <div class="col s3">
+        <div id="availableUsers" class="collection">
+          <!--<a id="" class="collection-item">Alvin</a>
+          <a id="" class="collection-item active">Alvin</a>
+          <a id class="collection-item">Alvin</a>
+          <a id class="collection-item">Alvin</a>-->
+        </div>    
+      </div>
+    </div>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
