:lipstick:Added card for chat!

--- a/chat.html
+++ b/chat.html
@@ -5,19 +5,35 @@
     <title>Sample FirebaseUI App</title>
     
     <!--Materialize CSS-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
   </head>
   <body>
-    <h1>This is the chat page!</h1>
+    <h1>This is the chat page!</h1>   
     <div class="row">
-        <div class="input-field col s6">
-          <input placeholder="message" id="message" type="text" class="validate">
+      <div class="col s12 m6">
+        <div class="card large blue-grey darken-1">
+          <div class="card-content white-text">
+            <span id="message-filler"></span>
+          </div>
+          <div class="card-action">
+            <form action="#">
+              <div class="row">
+                <div class="input-field col s12 white-text">
+                  <div class="col s8">
+                    <input id="message" type="text" class="validate">
+                    <label for="message">message</label>
+                  </div>
+                  <button id="sendMsg" type="submit" class="btn waves-effect waves-light" style="text-align: right">
+                    <i class="material-icons right">send</i>
+                  </button>
+                </div>
+              </div>  
+            </form>
+          </div>
         </div>
-    </div>
-    <div class="row">
-      <button id="sendMsg" type="submit">send</button>
-    </div>
-    
+      </div>
+    </div>        
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
