--- a/loggedIn.html
+++ b/loggedIn.html
@@ -6,6 +6,8 @@
     
     <!--Materialize CSS-->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+     <link rel="stylesheet" href="/css/loggedIn.css">
   </head>
   <body>
     <h1>Welcome to My Awesome App</h1>
