:construction: Ready to look at Watson

--- a/chat.html
+++ b/chat.html
@@ -30,12 +30,8 @@
             <form action="#">
               <div class="row">
                 <div class="input-field col s12 white-text">
-                  <!--<div class="col s8">
-                    <input id="message" type="text" class="validate">
-                    <label for="message">message</label>
-                  </div>-->
                   <div id="inputField" class="input-field col s8">
-                    <input id="message" type="text" class="validate">
+                    <input id="message" autocomplete="off" type="text" class="validate">
                     <label for="message">message</label>
                   </div>
                   <div id="btnDiv">
