:construction: started with post calls

--- a/chat.html
+++ b/chat.html
@@ -11,6 +11,7 @@
      <link rel="stylesheet" href="/css/chat.css">
   </head>
   <body>
+
     <h3>This is the chat page!</h3>   
     <div id="messagesCardRow" class="row chatRow">
       <div class="col s12 m6">
@@ -23,6 +24,7 @@
         </div>
       </div>
     </div>
+    
     <div id="formCardRow" class="row chatRow">
       <div class="col s12 m6">
         <div id="formCard" class="card medium blue-grey darken-1">
@@ -31,7 +33,7 @@
               <div class="row">
                 <div class="input-field col s12 white-text">
                   <div id="inputField" class="input-field col s8">
-                    <input id="message" autocomplete="off" type="text" class="validate">
+                    <input id="message" autocomplete="off" type="text" class="">
                     <label for="message">message</label>
                   </div>
                   <div id="btnDiv">
