--- a/bargraph.html
+++ b/bargraph.html
@@ -15,8 +15,8 @@
 		</div>
 
 		<!-- javascript -->
-		<script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
-		<script type="text/javascript" src="js/Chart.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
+		<script type="text/javascript" src="chartjs/js/jquery-3.1.1.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.js"></script>
+		<script type="text/javascript" src="chartjs/js/app.js"></script>
 	</body>
 </html>
