--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
     <!--<link href="css/style.css" rel="stylesheet">-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
   </head>
   <body>
 
@@ -19,11 +20,29 @@
   <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/1.0.0/firebaseui.css" />
   <script src="javascript/fbSetup.js"></script>
   <script src="javascript/fbUIconfig.js"></script>
+  
+<div class="container">
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo right"><img 
+        src="rapport-logo2.svg" 
+        height="100px"
+        width="100px"/></a>
 
-
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
+        
   <h1 align='center'>Demo</h1>
   <div id="firebaseui-auth-container">
     
+</div>
   </div>
   </body>
+
+   <link rel="stylesheet" href="public/css/logIn.css">
 </html>
