--- a/loggedIn.html
+++ b/loggedIn.html
@@ -10,6 +10,22 @@
      <link rel="stylesheet" href="/css/loggedIn.css">
   </head>
   <body>
+
+   <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo right"><img 
+        src="rapport-logo2.svg" 
+        height="100px"
+        width="100px"/></a>
+
+      <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <li><a href="sass.html">Sass</a></li>
+        <li><a href="badges.html">Components</a></li>
+        <li><a href="collapsible.html">JavaScript</a></li>
+      </ul>
+    </div>
+  </nav>
+  
     <h1>Welcome to My Awesome App</h1>
     <button id="st">sign out</button>
     <div id="currentUsers"></div>
