:construction: Added colors to individual charts and gave a max value for scale

--- a/bargraph.html
+++ b/bargraph.html
@@ -82,13 +82,13 @@
 			<div class="col m8">
 				<h6>Current Tones</h6>
 				<div class="row">
-					<div class="col m4">
+					<div class="col m4 s12">
 						<canvas id="canvasone"></canvas>
 					</div>
-					<div class="col m4">
+					<div class="col m4 s12">
 						<canvas id="canvastwo"></canvas>
 					</div>
-					<div class="col m4">
+					<div class="col m4 s12">
 						<canvas id="canvasthree"></canvas>
 					</div>
 				</div>
