:lipstick: Got three charts to appear

--- a/chat.html
+++ b/chat.html
@@ -58,13 +58,13 @@
       <div class="col m8">
         <div class="row">
           <div class="col m4">
-            <canvas id="canvasone"></canvas>
+            <canvas id="emotions"></canvas>
           </div>
           <div class="col m4">
-            
+            <canvas id="language"></canvas>
           </div>
           <div class="col m4">
-            
+            <canvas id="social"></canvas>
           </div>
         </div>
       </div>
