:construction: Can get all three plots to update simultaneously

--- a/chat.html
+++ b/chat.html
@@ -58,13 +58,13 @@
       <div class="col m8">
         <div class="row">
           <div class="col m4">
-            <canvas id="emotions"></canvas>
+            <canvas class="chart" id="emotions"></canvas>
           </div>
           <div class="col m4">
-            <canvas id="language"></canvas>
+            <canvas class="chart" id="language"></canvas>
           </div>
           <div class="col m4">
-            <canvas id="social"></canvas>
+            <canvas class="chart" id="social"></canvas>
           </div>
         </div>
       </div>
