css to login and dashboard

--- a/loggedIn.html
+++ b/loggedIn.html
@@ -1,33 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Sample FirebaseUI App</title>
-    
-    <!--Materialize CSS-->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
-     <link rel="stylesheet" href="/css/loggedIn.css">
-  </head>
-  <body>
-    <h1>Welcome to My Awesome App</h1>
-    <button id="st">sign out</button>
-    <div id="currentUsers"></div>
-    <div class="row">
-      <div class="col s3">
-        <div id="availableUsers" class="collection">
-        </div>    
+<head>
+  <meta charset="UTF-8">
+  <title>Sample FirebaseUI App</title>
+
+  <!--Materialize CSS-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+  <link rel="stylesheet" href="/css/loggedIn.css">
+</head>
+
+<body>
+  <header>
+    <nav>
+      <div class="nav-wrapper blue-grey darken-2">
+        <a href="#" class="brand-logo right"><img src="/images/rapport-logo2.svg" height="100px" width="100px" /></a>
+
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a id="slider" data-activates="slide-out" class="button"><i class="material-icons">menu</i></a></li>
+          <li><a href="">Settings</a></li>
+          <li><a href="">Chats</a></li>
+          <li><a href="">Archives</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+
+
+    <div class="spacer"></div>
+
+    <ul id="slide-out" class="side-nav">
+  
+      <li>
+        <div class="row" id="headerRow">
+          <div class="col s6">
+            <i class="large material-icons" id="peopleIcon">people_outline</i>
+          </div>
+          <div id="onlineHeaderCol" class="col s6">
+            <h2 id="onlineHeader">Online</h2>
+          </div>
+        </div>
+      </li>
+      <li>
+        <div class="divider"></div>
+      </li>
+      <div id="availableUsers" class="collection">
+      </div>
+
+    </ul>
+    <div class="chatbox-area">
+      <div class="chatbox-area blue-grey lighten-3">
+        <div class="row">
+          <div class="col s12">
+            <p>The Tone Analyzer service helps people understand tone along three major categories: emotional, social, and language.
+              For each category, the service returns a score in the range 0 - 1 that indicates the probability that the tone
+              exists in the content. Example shown below.</p>
+            <img id="chart-img" src="/images/tone-graphs.png" alt="chart" >
+          </div>
+        </div>
+      </div>
+      <br>
+    </div>
+  </main>
+  <br>
+  <footer class="page-footer blue-grey">
+    <div class="container">
+      <div class="row">
+        <div class="col l4">
+          <h5 class="white-text">Rapport</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
+          </ul>
+        </div>
+        <div class="col l4">
+          <h5 class="white-text">Help</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Getting Started</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="col l4">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">facebook</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">twitter</a></li>
+          </ul>
+        </div>
       </div>
     </div>
+    <div class="footer-copyright blue-grey darken-2">
+      <div class="container">
+        © 2017 Rapport
+      </div>
+    </div>
+  </footer>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-
-    <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+  <script>
+    $(".button-collapse").sideNav();
+  </script>
   <script src="/javascript/fbSetup.js"></script>
   <script src="/javascript/fbFunctions.js"></script>
-  <script src="/javascript/events.js"></script> 
-  <script src="/javascript/domManipulations.js"></script>  
-  </body>
+  <script src="/javascript/events.js"></script>
+  <script src="/javascript/domManipulations.js"></script>
+</body>
+
 </html>
