--- a/chat.html
+++ b/chat.html
@@ -14,7 +14,124 @@
 
 <body>
 
+  <header>
+    <nav>
+      <div class="nav-wrapper blue-grey darken-4">
+        <a href="#" class="brand-logo right"><img src="/images/rapport-logo2.svg" height="100px" width="100px" /></a>
+
+        <ul id="nav-mobile" class="left hide-on-med-and-down">
+          <li><a href="sass.html">Settings</a></li>
+          <li><a href="badges.html">Chats</a></li>
+          <li><a href="collapsible.html">Archives</a></li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
   <main>
+    <div class="spacer"></div>
+    <div class="row">
+      <div class="col m4">
+        <div id="messagesCardRow" class="row chatRow">
+          <div class="col s12 m12">
+            <div id="messagesCard" class="card large blue-grey white-text">
+              <div id="messagesCardContent" class="card-content">
+                <div id="messages">
+                  <span id="message-filler"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div id="formCardRow" class="row chatRow">
+          <div class="col s12 m12">
+            <div id="formCard" class="card large blue-grey white-text">
+              <div id="formCardContent" class="card-content">
+                <form action="#">
+                  <div class="row">
+                    <div class="input-field col s12 white-text">
+                      <div id="inputField" class="input-field col s8">
+                        <input id="message" autocomplete="off" type="text" class="">
+                        <label for="message">message</label>
+                      </div>
+                      <div id="btnDiv">
+                        <button id="sendMsg" type="submit" class="btn waves-effect waves-orange" style="text-align: right">
+                      Send
+                      <i class="material-icons right">send</i>
+                    </button>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        
+      </div>
+      <!--<div class="col m4">
+      </div>-->
+      <div class="col m4">
+        <div class="col m12">
+          <h4>Emotions</h4>
+          <canvas class="chart" id="emotions"></canvas>
+        </div>
+        <div class="col m12">
+          <h4>Language</h4>
+          <canvas class="chart" id="language"></canvas>
+        </div>
+        <div class="col m12">
+          <h4>Social</h4>
+          <canvas class="chart" id="social"></canvas>
+        </div>
+      </div>
+      <br>
+    </div>
+  </main>
+  <br>
+
+  <footer class="page-footer blue-grey">
+    <div class="container">
+      <div class="row">
+
+        <div class="col l4">
+          <h5 class="white-text">Rapport</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">About</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Blog</a></li>
+          </ul>
+        </div>
+
+        <div class="col l4">
+          <h5 class="white-text">Help</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Getting Started</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">Contact Us</a></li>
+          </ul>
+        </div>
+
+        <div class="col l4">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">facebook</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">twitter</a></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2017 Rapport
+
+      </div>
+    </div>
+  </footer>
+
+  <!--<main>
     <div class="row">
       <div class="col m4">
         <h3>This is the chat page!</h3>
@@ -69,14 +186,14 @@
         </div>
       </div>
     </div>
-  </main>
+  </main>-->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-  
+
   <script src="/javascript/fbSetup.js"></script>
   <script src="/javascript/fbFunctions.js"></script>
   <script src="/javascript/events.js"></script>
