--- a/chat.html
+++ b/chat.html
@@ -68,25 +68,25 @@
             </div>
           </div>
         </div>
-
-
-        
       </div>
       <!--<div class="col m4">
       </div>-->
-      <div class="col m4">
-        <div class="col m12">
-          <h4>Emotions</h4>
-          <canvas class="chart" id="emotions"></canvas>
+      <div class="col m8">
+        <div class="row">
+          <div class="col m4">
+            <h4>Emotions</h4>
+            <canvas class="chart" id="emotions"></canvas>
+          </div>
+          <div class="col m4">
+            <h4>Language</h4>
+            <canvas class="chart" id="language"></canvas>
+          </div>
+          <div class="col m4">
+            <h4>Social</h4>
+            <canvas class="chart" id="social"></canvas>
+          </div>
         </div>
-        <div class="col m12">
-          <h4>Language</h4>
-          <canvas class="chart" id="language"></canvas>
-        </div>
-        <div class="col m12">
-          <h4>Social</h4>
-          <canvas class="chart" id="social"></canvas>
-        </div>
+
       </div>
       <br>
     </div>
