--- a/chat.html
+++ b/chat.html
@@ -32,10 +32,10 @@
   <main>
     <div class="spacer"></div>
     <div class="row">
-      <div class="col m4">
+      <div class="col m4" id="chatCol">
         <div id="messagesCardRow" class="row chatRow">
           <div class="col s12 m12">
-            <div id="messagesCard" class="card large blue-grey white-text">
+            <div id="messagesCard" class="card medium blue-grey white-text">
               <div id="messagesCardContent" class="card-content">
                 <div id="messages">
                   <span id="message-filler"></span>
@@ -46,18 +46,17 @@
         </div>
         <div id="formCardRow" class="row chatRow">
           <div class="col s12 m12">
-            <div id="formCard" class="card large blue-grey white-text">
+            <div id="formCard" class="card medium blue-grey white-text">
               <div id="formCardContent" class="card-content">
                 <form action="#">
                   <div class="row">
                     <div class="input-field col s12 white-text">
-                      <div id="inputField" class="input-field col s8">
+                      <div id="inputField" class="input-field col s10">
                         <input id="message" autocomplete="off" type="text" class="">
                         <label for="message">message</label>
                       </div>
                       <div id="btnDiv">
-                        <button id="sendMsg" type="submit" class="btn waves-effect waves-orange" style="text-align: right">
-                      Send
+                        <button id="sendMsg" type="submit" class="btn-floating waves-effect waves-orange" style="text-align: right">
                       <i class="material-icons right">send</i>
                     </button>
                       </div>
