styling on pages

--- a/loggedIn.html
+++ b/loggedIn.html
@@ -59,7 +59,7 @@
             <p>The Tone Analyzer service helps people understand tone along three major categories: emotional, social, and language.
               For each category, the service returns a score in the range 0 - 1 that indicates the probability that the tone
               exists in the content. Example shown below.</p>
-            <img id="chart-img" src="/images/tone-graphs.png" alt="chart" >
+            <img id="chart-img" src="/images/tone-graphs.PNG" alt="chart" >
           </div>
         </div>
       </div>
