--- a/chat.html
+++ b/chat.html
@@ -16,7 +16,7 @@
 
   <header>
     <nav>
-      <div class="nav-wrapper blue-grey darken-4">
+      <div class="nav-wrapper blue-grey darken-2">
         <a href="#" class="brand-logo right"><img src="/images/rapport-logo2.svg" height="100px" width="100px" /></a>
 
         <ul id="nav-mobile" class="left hide-on-med-and-down">
@@ -35,7 +35,7 @@
       <div class="col m4" id="chatCol">
         <div id="messagesCardRow" class="row chatRow">
           <div class="col s12 m12">
-            <div id="messagesCard" class="card medium blue-grey white-text">
+            <div id="messagesCard" class="card medium blue-grey lighten-4">
               <div id="messagesCardContent" class="card-content">
                 <div id="messages">
                   <span id="message-filler"></span>
@@ -46,11 +46,11 @@
         </div>
         <div id="formCardRow" class="row chatRow">
           <div class="col s12 m12">
-            <div id="formCard" class="card medium blue-grey white-text">
+            <div id="formCard" class="card medium blue-grey lighten-4">
               <div id="formCardContent" class="card-content">
                 <form action="#">
                   <div class="row">
-                    <div class="input-field col s12 white-text">
+                    <div class="input-field col s12">
                       <div id="inputField" class="input-field col s10">
                         <input id="message" autocomplete="off" type="text" class="">
                         <label for="message">message</label>
@@ -87,10 +87,8 @@
         </div>
 
       </div>
-      <br>
     </div>
   </main>
-  <br>
 
   <footer class="page-footer blue-grey">
     <div class="container">
@@ -122,7 +120,7 @@
 
       </div>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright blue-grey darken-2">
       <div class="container">
         © 2017 Rapport
 
