modified some looks

--- a/loggedIn.html
+++ b/loggedIn.html
@@ -20,7 +20,7 @@
 
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a id="slider" data-activates="slide-out" class="button"><i class="material-icons">menu</i></a></li>
-          <li><a href="">Settings</a></li>
+          <li><a id="st" href="">Sign Out</a></li>
           <li><a href="">Chats</a></li>
           <li><a href="">Archives</a></li>
         </ul>
@@ -58,8 +58,15 @@
           <div class="col s12">
             <p>The Tone Analyzer service helps people understand tone along three major categories: emotional, social, and language.
               For each category, the service returns a score in the range 0 - 1 that indicates the probability that the tone
-              exists in the content. Example shown below.</p>
-            <img id="chart-img" src="/images/tone-graphs.PNG" alt="chart" >
+              exists in the content.</p>
+              <br>
+              <p>Coming Soon... Dashboards<p>
+            <!--<img id="chart-img" src="/images/tone-graphs.PNG" alt="chart" >-->
+            <span>
+              <i class="large material-icons">insert_chart</i>
+              <i class="large material-icons">multiline_chart</i>
+              <i class="large material-icons">pie_chart</i>
+            </span>
           </div>
         </div>
       </div>
