--- a/chat.html
+++ b/chat.html
@@ -20,14 +20,13 @@
         <a href="#" class="brand-logo right"><img src="/images/rapport-logo2.svg" height="100px" width="100px" /></a>
 
         <ul id="nav-mobile" class="left hide-on-med-and-down">
-          <li><a href="sass.html">Settings</a></li>
-          <li><a href="badges.html">Chats</a></li>
-          <li><a href="collapsible.html">Archives</a></li>
+          <li><a id="st" href="">Sign Out</a></li>
+          <li><a href="">Chats</a></li>
+          <li><a href="">Archives</a></li>
         </ul>
       </div>
     </nav>
   </header>
-
 
   <main>
     <div class="spacer"></div>
@@ -128,62 +127,6 @@
     </div>
   </footer>
 
-  <!--<main>
-    <div class="row">
-      <div class="col m4">
-        <h3>This is the chat page!</h3>
-        <div id="messagesCardRow" class="row chatRow">
-          <div class="col s12 m12">
-            <div id="messagesCard" class="card medium blue-grey darken-1">
-              <div id="messagesCardContent" class="card-content white-text">
-                <div id="messages">
-                  <span id="message-filler"></span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="formCardRow" class="row chatRow">
-          <div class="col s12 m12">
-            <div id="formCard" class="card medium blue-grey darken-1">
-              <div id="formCardContent" class="card-content white-text">
-                <form action="#">
-                  <div class="row">
-                    <div class="input-field col s12 white-text">
-                      <div id="inputField" class="input-field col s8">
-                        <input id="message" autocomplete="off" type="text" class="">
-                        <label for="message">message</label>
-                      </div>
-                      <div id="btnDiv">
-                        <button id="sendMsg" type="submit" class="btn waves-effect waves-light" style="text-align: right">
-                      Send
-                      <i class="material-icons right">send</i>
-                    </button>
-                      </div>
-                    </div>
-                  </div>
-                </form>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col m8">
-        <div class="row">
-          <div class="col m4">
-            <canvas class="chart" id="emotions"></canvas>
-          </div>
-          <div class="col m4">
-            <canvas class="chart" id="language"></canvas>
-          </div>
-          <div class="col m4">
-            <canvas class="chart" id="social"></canvas>
-          </div>
-        </div>
-      </div>
-    </div>
-  </main>-->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
