added dashboard button

--- a/loggedIn.html
+++ b/loggedIn.html
@@ -21,7 +21,7 @@
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a id="slider" data-activates="slide-out" class="button"><i class="material-icons">menu</i></a></li>
           <li><a id="st" href="">Sign Out</a></li>
-          <li><a href="">Chats</a></li>
+          <li><a href="/dashboard">Dashboards</a></li>
           <li><a href="">Archives</a></li>
         </ul>
       </div>
