--- a/chat.html
+++ b/chat.html
@@ -21,7 +21,7 @@
 
         <ul id="nav-mobile" class="left hide-on-med-and-down">
           <li><a id="st" href="">Sign Out</a></li>
-          <li><a href="">Chats</a></li>
+          <li><a href="/dashboard">Dashboard</a></li>
           <li><a href="">Archives</a></li>
         </ul>
       </div>
